<resources>
    <string name="app_name">Bandify</string>
    <string name="la_login">Log into Bandify</string>
    <string name="la_signup">New User? Sign up Here</string>
    <string name="la_fill_all">Please fill out a username and password</string>
    <string name="la_login_failure">Login failed</string>
    <string name="la_login_success">Logged into Bandify!</string>
    <string name="bandify_sign_out">Sign out</string>
    <string name="la_login_us">Enter username</string>
    <string name="la_login_pa">Enter password</string>
    <string name="bandify_signed_out">Signed out of Bandify</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_post_user">John Doe</string>
    <string name="profile">Profile</string>
    <string name="tr_post_pic">post_picture</string>
    <string name="play_music">Play Music</string>
    <string name="pause_music">Pause Music</string>
    <string name="band">Band</string>
    <string name="search">Search</string>
    <string name="sample_hint">Search here</string>
    <string name="ti_post">Posts</string>
    <string name="ti_band">Bands</string>
    <string name="tr_post">post</string>
    <string name="like_post">You liked this post.</string>
    <string name="unlike_post">You unliked this post.</string>
    <string name="post_l_ul">"You liked or unliked this post: "</string>
    <string name="profile_sample_des">This is my description. I can sing or play various instruments.</string>

</resources>