<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_compose"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/compose"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_band"
        android:title="@string/band"
        android:icon="@drawable/icon_band"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/profile"
        app:showAsAction="always"/>


</menu>